
 Summary
 =======
 
   Version 0.67
   Version 0.66
   Version 0.65
   Version 0.64

-----------------------------------------------------------------------
 Version 0.67
 ============

 Released on 

 Total files count:    
 Total lines count: 

 New features and improvements:

   - DossierManager: better behaves when the list is empty, disabling all unrelevant actions.
   - ExerciceMetaBin: no more force a new dossier to have a current exercice.

 Bug fixes:

   - myISettings: fix free_groups() behavior when groups list is NULL.
   - ofaExerciceTreeview: fix the update when no dossier is selected.
   - ofaIDBDossierMeta, ofaIDBExerciceMeta: fix refs management.

 Other changes:

   - ofaEntryStore: is now loaded at once.
   - ofa_idbdossier_meta_unref(): removed function.
   - ofa_idbexercice_meta_unref(): removed function.

-----------------------------------------------------------------------
 Version 0.66
 ============

 Released on 2017-02-05

 Total files count:    779
 Total lines count: 511208

 New features and improvements:

   - DossierManager: be able to close the currently opened dossier (todo #1338).
   - Recovery: new assistant to import datas from other softwares (todo #1260).
   - Review and harmonize standard actions on dossier open (todo #1300, todo #1322).

 Bug fixes:

   - 

 Other changes:

   - myIScopeMap: is renamed from myIActionMap.
   - myScopeMapper: new class.
   - ofaDossierPrefs: deprecated class.
   - ofaDossierStore: is now owned by #ofaHub (todo #1343). 
   - ofa_extender_collection_get_for_type(): does not return a new ref (todo #1341).
   - ofaExtenderModule: review loading/unloading the library.
   - ofaExtension: improve API v2.
   - ofa_idbdossier_meta_set_provider(): remove 'const' modifier from argument list.
   - ofa_idbdossier_meta_unref(): new function.
   - ofa_idbexercice_meta_unref(): new function.
   - ofaIExtenderSetter: interface renamed from ofaISetter (todo #1345).